--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
-NODE_ENV=local
+NODE_ENV=test
 PORT=2000
 
-DATABASE_URL="mysql://book_user:password@localhost:3306/bookstore"
+DATABASE_URL="mysql://book_user:StrongPass123!@localhost:3306/bookstore_test?ssl=false"
 
 JWT_SECRET="change_me"
 JWT_ALGORITHM=HS256
