--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 NODE_ENV=local
 PORT=2000
 
-DATABASE_URL="mysql://book_user:password@localhost:3306/bookstore"
+DATABASE_URL="mysql://book_user:StrongPass123!@localhost:3306/bookstore"
+PRISMA_CLIENT_ENGINE_TYPE=binary
 
 JWT_SECRET="change_me"
 JWT_ALGORITHM=HS256
